--- a/.github/workflows/master_htmlformat.yml
+++ b/.github/workflows/master_htmlformat.yml
@@ -21,10 +21,10 @@ jobs:
         dotnet-version: '3.0.103'
 
     - name: Build with dotnet
-      run: dotnet build ${{env.DOTNET_ROOT}}/HtmlFormat/HtmlFormat/HtmlFormat.csproj --configuration Release
+      run: dotnet build HtmlFormat.csproj --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish ${{env.DOTNET_ROOT}}/HtmlFormat/HtmlFormat/HtmlFormat.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish HtmlFormat.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
