--- a/.github/workflows/master_htmlformat.yml
+++ b/.github/workflows/master_htmlformat.yml
@@ -24,10 +24,10 @@ jobs:
       run: dir
     
     - name: Build with dotnet
-      run: dotnet build HtmlFormat.csproj --configuration Release
+      run: dotnet build HtmlFormat\HtmlFormat\HtmlFormat.csproj --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish HtmlFormat.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish HtmlFormat\HtmlFormat\HtmlFormat.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v1
