--- a/HtmlFormat/HtmlFormat/HtmlFormat.csproj
+++ b/HtmlFormat/HtmlFormat/HtmlFormat.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.13.0" />
     <PackageReference Include="HtmlMinificationMiddleware" Version="3.1.0" />
   </ItemGroup>
 
